# old.bee.fish

./: .gitignore  .gitmodules  .htaccess  CMakeLists.txt  Makefile  README.md  backtrace.txt  bee.fish.js  body.js  brain-storm.txt  camera.html  config.h  copy-bin.sh  dev.config.h  fetch.html  head.js  index.html  notes.txt  post-build.sh  pre-build.sh  server.pid  shuffle.txt  snippets.txt  start  start.sh  stop  stop.sh  structure.json  style.css  todo.txt  words.txt  wstring.txt
FeebeeCam/: .gitignore  CMakeLists.txt  Makefile  backtrace.txt  config.h  sdkconfig  sdkconfig.old  wiring.txt
FeebeeCam/components/website/: CMakeLists.txt  files.h  website.cpp  website.h
FeebeeCam/components/website/certs/: .gitignore  feebeecam.local.crt  generate-certificates.sh
FeebeeCam/components/website/files/: beehive.html  fetch.js  full-screen.js  loading-brown.gif.bak  logon.html  setup.html
FeebeeCam/main/: CMakeLists.txt  app_httpd.cpp  app_httpd.h  cam_cmd.cpp  cam_cmd.h  config.h  feebee-cam-config.cpp  feebee-cam-config.h  main.cpp  protocol.h  test.cpp  test.h  timer_cam_config.h
TimerCam-idf/: CMakeLists.txt  Makefile  flash.sh  partitions.csv  sdkconfig  sdkconfig.old
archive/: index.html  notes.txt  start.html  style.css  x.html  x.js
array/: array.js  index.html
beehive/: beehive-index.html  beehive.html  connecttest.txt  error.js  index.html  logon.html  manifest.-missing.json  manifest.json  parts.csv  setup.html  style.css  test.html  test.js  time-zones.json  version.json  version.txt
cgi/: .htaccess  Makefile  post.html  postjavascript.html  test.cpp
client/: fetch.js  format-weather.js  formatJSON.js  index.html
console/: index.html
draw/: .htaccess  app.js  canvas.js  code.js  connector.js  dimensions.js  drawing.js  editor.js  index.html  layers.js  line.js  matrix.js  notes.txt  point.js  rectangle.js  snippits.js  text.js
feebee-cam/: CMakeLists.txt  feebee-cam.ino  partitions.csv
function/: function.js  index.html
id/: id.js  index.html
image/: image.js  index.html
logon/: authentication.js  index.html  logon.js
map/: index.html  storage.js
memory/: index.html  memory.js
misc/: logout.html  logout.js
object/: index.html  object.js
parser/: index.html  index.html.bak  test.html  test.js
platformio/: .gitignore  CMakeLists.txt  flash.sh  platformio.ini  sdkconfig  sdkconfig.bak  sdkconfig.m5stack-timer-cam  sdkconfig.m5stack-timer-cam.old
pointer/: index.html  pointer.js
power-encoding/: power-encoding.js
power-encoding.bak/: index.html  power-encoding.js
red/: index.html
server/: Makefile  basic-authorization.h  bee-fish.h  bee.fish.data  bee.fish.db2  build-number.mk  build-number.txt  config.h  gdb.txt  main.cpp  md5.cpp  request.h  server  (+19 more)
(+1583 files in other folders)
